add desafio html e css

--- a/desafios-html/blog-post.html
+++ b/desafios-html/blog-post.html
@@ -22,7 +22,7 @@
             />
             <figcaption>Tutorial de HTML5</figcaption>
         </figure>
-        <cite>&ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.&rdquo;</cite>
+        <blockquote>&ldquo;Lorem, ipsum dolor sit amet consectetur adipisicing elit.&rdquo;</blockquote>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
           blanditiis tenetur non, aperiam inventore amet molestias ipsa
