--- a/desafios-html/glossary.html
+++ b/desafios-html/glossary.html
@@ -9,13 +9,13 @@
 <body>
     <dl>
         <h1>Estrutura HTML</h1>
-        <b><dt>!DOCTYLPE html</dt></b>
+        <strong><dt>!DOCTYLPE html</dt></strong>
         <dd>Define o tipo de documento como HTML5</dd>
-        <b><dt>html</dt></b>
+        <strong><dt>html</dt></strong>
         <dd>Define um documento HTML</dd>
-        <b><dt>head</dt></b>
+        <strong><dt>head</dt></strong>
         <dd>Container para metadados, título da página, links...</dd>
-        <b><dt>body</dt></b>
+        <strong><dt>body</dt></strong>
         <dd>Corpo do documento</dd>
     </dl>
 
