--- a/desafios-html/contato.html
+++ b/desafios-html/contato.html
@@ -10,7 +10,7 @@
 <form action="index.html" method="post">
   <fieldset>
     <legend>Title</legend>
-    <b>Assunto:</b> <select name="assunto" id="assunto">
+    <strong>Assunto:</strong> <select name="assunto" id="assunto">
         <option value=""></option>
         <option value="suport">Suporte</option>
         <option value="cursos">Cursos</option>
@@ -18,11 +18,11 @@
         <option value="certificado">Certificado</option>
         <option value="comunidade">Comunidade</option>
     </select><br><br>
-    <b><label for="nome">Nome completo:</label></b><br>
+    <strong><label for="nome">Nome completo:</label></strong><br>
     <input type="text" id="nome" placeholder="Seu nome"><br><br>
-    <b><label for="email">E-mail:</label></b><br>
+    <strong><label for="email">E-mail:</label></strong><br>
     <input type="email" id="email" placeholder="email@seudominio.com"><br><br>
-    <b><label for="msn">Mensagem:</label></b><br>
+    <strong><label for="msn">Mensagem:</label></strong><br>
     <textarea name="msn" id="msn" cols="30" rows="10"></textarea><br><br>
     <input type="checkbox" id="checkbox"> <label for="checkbox">Aceito receber novidades por e-mail</label><br><br>
     <button type="submit">Enviar</button>
