--- a/desafio-rocketseat-RocketNews/index.html
+++ b/desafio-rocketseat-RocketNews/index.html
@@ -37,7 +37,7 @@
             <a href="#" class="link_a">Deixe-me ler primeiro <img src="./src/images/assets/arrow-right.svg" alt=""></a>
         </section>
         <section class="image">
-            <img src="./src/images/assets/read_news.jpg" alt="imagem de fundo">
+            <!-- <img src="./src/images/assets/read_news.jpg" alt="imagem de fundo"> -->
         </section>
     </main>
 </body>
