--- a/index.html
+++ b/index.html
@@ -99,66 +99,12 @@
             <ul class="ul-links" id="js">
               <li>
                 <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/glossary"
-                  target="_blank"
+                  href="#"
                 >
-                  Glossario
+                  Em breve
                 </a>
               </li>
 
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/contato"
-                  target="_blank"
-                >
-                  Contato
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/shopping-list.html"
-                  target="_blank"
-                >
-                  Lista de compras
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/quiz"
-                  target="_blank"
-                >
-                  Quiz
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/blog-post"
-                  target="_blank"
-                >
-                  Blog
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio_HTML_e_CSS/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - Pagina de receita
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio-rocketseat-RocketNews/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - RocketNews
-                </a>
-              </li>
             </ul>
           </li>
 
@@ -166,68 +112,15 @@
             <!-- <i class="fas fa-angle-down"></i> -->
             <h3 class="h3-html"><i class="fas fa-angle-right arrow" id="njs"></i> Desafios de NodeJS</h3>
             <ul class="ul-links" id="njs">
-              <li>
+               <li>
                 <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/glossary"
-                  target="_blank"
+                  href="#"
                 >
-                  Glossario
+                  Em breve
                 </a>
               </li>
 
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/contato"
-                  target="_blank"
-                >
-                  Contato
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/shopping-list.html"
-                  target="_blank"
-                >
-                  Lista de compras
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/quiz"
-                  target="_blank"
-                >
-                  Quiz
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/blog-post"
-                  target="_blank"
-                >
-                  Blog
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio_HTML_e_CSS/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - Pagina de receita
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio-rocketseat-RocketNews/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - RocketNews
-                </a>
-              </li>
+              
             </ul>
           </li>
 
@@ -235,136 +128,24 @@
             <!-- <i class="fas fa-angle-down"></i> -->
             <h3 class="h3-html"><i class="fas fa-angle-right arrow" id="rjs"></i> Desafios de ReactJS</h3>
             <ul class="ul-links" id="rjs">
-              <li>
+               <li>
                 <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/glossary"
-                  target="_blank"
+                  href="#"
                 >
-                  Glossario
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/contato"
-                  target="_blank"
-                >
-                  Contato
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/shopping-list.html"
-                  target="_blank"
-                >
-                  Lista de compras
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/quiz"
-                  target="_blank"
-                >
-                  Quiz
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/blog-post"
-                  target="_blank"
-                >
-                  Blog
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio_HTML_e_CSS/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - Pagina de receita
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio-rocketseat-RocketNews/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - RocketNews
+                  Em breve
                 </a>
               </li>
             </ul>
           </li>
-
-
            <li class="desafios--html" >
             <!-- <i class="fas fa-angle-down"></i> -->
             <h3 class="h3-html"><i class="fas fa-angle-right arrow" id="rnjs"></i> Desafios de React Native</h3>
             <ul class="ul-links" id="rnjs">
-              <li>
+               <li>
                 <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/glossary"
-                  target="_blank"
+                  href="#"
                 >
-                  Glossario
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/contato"
-                  target="_blank"
-                >
-                  Contato
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/shopping-list.html"
-                  target="_blank"
-                >
-                  Lista de compras
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/quiz"
-                  target="_blank"
-                >
-                  Quiz
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafios-html/blog-post"
-                  target="_blank"
-                >
-                  Blog
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio_HTML_e_CSS/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - Pagina de receita
-                </a>
-              </li>
-
-              <li>
-                <a
-                  href="https://carloseduardovdeoliveira.github.io/desafios/desafio-rocketseat-RocketNews/"
-                  target="_blank"
-                >
-                  Desafio HTML & CSS - RocketNews
+                  Em breve
                 </a>
               </li>
             </ul>
