--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
               <li>
                 <a
                   href="https://carloseduardovdeoliveira.github.io/DevFinances/"
+                  target="_blank"
                 >
                   Dev. Finances
                 </a>
